Table "users" {
  "id" serial [pk, increment]
  "firstname" VARCHAR(100) [not null]
  "lastname" varchar(100) [not null]
  "email" varchar(100) [unique, not null]
  "password" varchar(100) [not null]
}

Table "categories" {
  "id" serial [pk, increment]
  "name" varchar(200) [not null]
}

Table "comments" {
  "id" serial [pk, increment]
  "id_post_comment" int [not null]
  "user_name_comment" varchar(200) [not null]
  "comment" varchar(200) [not null]
}

Table "posts" {
  "id" serial [pk, increment]
  "title" varchar(200) [not null]
  "slug" varchar(200) [not null]
  "img" varchar(100) [not null]
  "body" text [not null]
  "category_id" int [not null]
  "user_id" int [not null]
  "user_name" varchar(200) [not null]
}

Ref:"posts"."id" < "comments"."id_post_comment" [update: cascade, delete: cascade]

Ref:"categories"."id" < "posts"."category_id" [update: cascade, delete: cascade]

Ref:"users"."id" < "posts"."user_id" [update: cascade, delete: cascade]
